--- a/main.scss
+++ b/main.scss
@@ -148,7 +148,7 @@ header {
     min-height: 100vh;
     background-color: rgba(#060606, 0.7);
     &::before {
-        background-image: url('assets/img/hero-bg.jpg');
+        background-image: url('../../assets/img/hero-bg.jpg');
         background-position: center;
         background-size: cover;
         content: "";
