--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9387,7 +9387,7 @@ header {
   min-height: 100vh;
   background-color: rgba(6, 6, 6, 0.7); }
   header::before {
-    background-image: url("assets/img/hero-bg.jpg");
+    background-image: url("../../assets/img/hero-bg.jpg");
     background-position: center;
     background-size: cover;
     content: "";
